# Galleria-Expressive

./: .gitignore  LICENSE  README.md  check_output.txt  check_output_2.txt  index.html  logs.md  package-lock.json  package.json  tsconfig.json  vision.md  vite.config.ts
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  build_err.txt  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: commands.toml
src-tauri/src/: commands.rs  db.rs  image_processing.rs  lib.rs  main.rs  thumb.rs
src/components/: AlbumView.svelte  BatchActionBar.svelte  BottomPill.svelte  DetailView.svelte  EmptyState.svelte  PhotoEditor.svelte  PhotoGrid.svelte  SettingsPanel.svelte  Sidebar.svelte  Thumbnail.svelte  Toolbar.svelte
src/lib/: drag-window.ts  icons.ts  imageProcessing.ts  store.ts  tauriMock.ts
src/lib/editing/: ColorWheel.svelte  CropOverlay.svelte  EditingSidebar.svelte  ExportDialog.svelte  Histogram.svelte  MaskingOverlay.svelte  SliderRow.svelte  adjustments.ts  imageProcessor.ts
src/lib/editing/panels/: BasicPanel.svelte  CalibrationPanel.svelte  ColorGradingPanel.svelte  DetailPanel.svelte  EffectsPanel.svelte  HSLPanel.svelte  HistoryPanel.svelte  LensPanel.svelte  MaskingPanel.svelte  SnapshotPanel.svelte  ToneCurvePanel.svelte
